--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   },
   "version": "1.0.2",
   "description": "Fernet algorithm implementation written in Typescript using Web Crypto API",
-  "main": "dist/index.js",
+  "exports": "./dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "files": [
     "/dist"
   ],
   "scripts": {
     "build": "npx tsc",
-    "test": "jest",
+    "test": "vitest",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint -c .eslintrc.json"
   },
@@ -34,32 +35,16 @@
   "author": "Zoran Davidovic",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.21.0",
-    "@inrupt/jest-jsdom-polyfills": "^1.6.2",
-    "@jest/globals": "^29.4.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.4",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
-    "babel-jest": "^29.4.3",
+    "@vitest/coverage-v8": "^1.3.1",
     "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.5.0",
+    "happy-dom": "^13.7.0",
     "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^1.3.1"
   }
 }
