--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "types": ["node"],
     "typeRoots": ["node_modules/@types"],
-    "target": "ES2015",
+    "target": "ESNext",
     "sourceMap": true,
     "outDir": "./dist",
     "noImplicitAny": true,
